qt4-x11 (4:4.8.7+dfsg-20) UNRELEASED; urgency=medium

  * Trim trailing whitespace.
  * Bump debhelper from old 9 to 12.
  * Set debhelper-compat version in Build-Depends.
  * Remove patches 13_fix_prl_files_dont_link_entire_world.diff.disabled
    that are missing from debian/patches/series.
  * Add missing colon in closes line.
  * Change priority extra to priority optional.
  * Drop unnecessary dh arguments: --parallel
  * Rely on pre-initialized dpkg-architecture variables.

 -- Debian Janitor <janitor@jelmer.uk>  Thu, 21 Nov 2019 21:13:06 +0000

qt4-x11 (4:4.8.7+dfsg-19) unstable; urgency=medium

  * Team upload.
  * Fix FTBS with GCC 9. (Closes: #925811)
    - Add gcc9-qforeach.patch to backport Q_FOREACH changes from Qt 5
    - Update qt-everywhere-opensource-src-4.8.7-gcc6.patch to add GCC 9 to
      the compiler checks

 -- Felix Geyer <fgeyer@debian.org>  Sun, 14 Jul 2019 12:19:27 +0200

qt4-x11 (4:4.8.7+dfsg-18) unstable; urgency=medium

  * Team upload.

  [ Edward Betts ]
  * debian/NEWS: Replace UNRELEASED with unstable.

  [ Alexander Volkov ]
  * Backport some vulnerability fixes from Qt 5 (closes: #923003).
    - CVE-2018-15518: double free or corruption in QXmlStreamReader.
    - CVE-2018-19869: Qt Svg crash when parsing malformed url reference.
    - CVE-2018-19870: NULL pointer dereference in QGifHandler.
    - CVE-2018-19871: QTgaFile CPU exhaustion.
    - CVE-2018-19872: crash when parsing a malformed PPM image.
    - CVE-2018-19873: QBmpHandler segfault on malformed BMP file.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 12 Apr 2019 23:10:28 +0300

qt4-x11 (4:4.8.7+dfsg-17) unstable; urgency=medium

  * Add fix-build-icu59.patch from OpenSuse. Fixes build with icu59
   (Closes: #898542). Thanks John Paul Adrian Glaubitz for digging the
   patch!
  * Put the source package in section oldlibs. We do not expect new
    developments with qt4-x11.
  * Update Vcs-[Git Browser] to the new location in salsa.debian.org.
